# templates

./: .gitignore  README.md
bash/: bash_script.sh  parse_options.sh
docker/compose/: README.md
docker/dockerfile/: README.md
makefile/: Makefile
python/: black.md  commitlint.md  commons.py  file.py  graph.py  json_formatter.py  log.py  rxpy.py  serialization.py  utils.py
python/black/: README.md
python/package/: .editorconfig  .gitlab-ci.yml  Makefile  pyproject.toml  requirements.txt  setup.cfg
python/package/mypkg/: __main__.py
python/package/mypkg/cli/: cli.py
python/serialization/: __init__.py  decorators.py  formatters.py
ssl/: README.md
typescript/: commitlint.md
typescript/angular/: Dockerfile
typescript/commitlint/: README.md
typescript/nodejs/: Dockerfile
typescript/tsconfig/: README.md  angular-16.json  base.json  node-22.json
