[metadata]
name = mypkg
version = file:VERSION
author = Márton Torner
author_email = torner.marton@gmail.com
description = Test python package
long_description = file:README.md
long_description_content_type = text/markdown
url = https://gitlab.martontorner.com/mtorner/mypkg
project_urls =
    Documentation=https://gitlab.martontorner.com/mtorner/mypkg/docs
    Bug Tracker=https://gitlab.martontorner.com/mtorner/mypkg/issues
    Source Code=https://gitlab.martontorner.com/mtorner/mypkg
classifiers =
    Topic :: Software Development :: Libraries :: Python Modules
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Environment :: Console
keywords =
    test
    package


[options]
zip_safe = False
include_package_data = True
python_requires = ~=3.9
packages = find:
setup_requires =
    wheel~=0.37.1
install_requires =
    click~=8.1.2


[options.packages.find]
include =
    mypkg*


[options.entry_points]
console_scripts=
    mypkg=mypkg.__main__:main


[bdist_wheel]
universal = 1
python-tag=py3


[easy_install]

[flake8]
per-file-ignores =
    __init__.py:F401
exclude = .git,__pycache__,build,dist,venv
